All Ptidej Tests can now run in JUnit and Maven
Cleaned up DeMIMA heavily, PtidejSolver.exe works again!